--- a/spec/browser.html
+++ b/spec/browser.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <title>Fleet Calculator Mocha Test</title>
+    <title>Fluent Time mocha tests</title>
     <link rel="stylesheet" href="../node_modules/mocha/mocha.css" type="text/css" charset="utf-8" />
 </head>
 <body>
@@ -43,9 +43,6 @@
 
     <!-- run mocha -->
     <script type="text/javascript" charset="utf-8">
-        var after = FluentTime.after;
-        var every = FluentTime.every;
-
         mocha
             .globals(['Toyota', 'jQuery*', 'Backbone', '_', 'helpers']) // acceptable globals
             .run();
